# imgborders

./: .gitignore  CMakeLists.txt  DESCRIPTION  ImgBorder.cpp  ImgBorder.hpp  ImgBorderPassElement.cpp  ImgBorderPassElement.hpp  ImgLoader.cpp  ImgLoader.hpp  ImgUtils.cpp  ImgUtils.hpp  README.md  debug.sh  flake.nix  globals.hpp  hyprpm.toml  main.cpp
